--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html>
     <head>
         <title>CuHacking 2019</title>
+        <script>
+            function myFunc() {
+                document.getElementById("demo").innerHTML = "Hack your grandparents."
+            }
+        </script>
     </head>
 
     <body>
         <h1>CuHacking 2019</h1>
-        <p>Hello World!</p>
+        <p id = "demo">Hello World!</p>
+        <button type="button" onclick="myFunc()">Test!</button>
     </body>
 </html>
