Changed title and text

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     </head>
 
     <body>
-        <h1>CuHacking 2019</h1>
-        <p id = "demo">Hello World!</p>
+        <h1>CuHacking 2019 Hackathon Idea Generator</h1>
+        <p id = "demo">Push the button to generate!</p>
         <button type="button" onclick="myFunc()">Test!</button>
     </body>
 </html>
