--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <body>
         <h1>CuHacking 2019 Hackathon Idea Generator</h1>
-        <p id = "demo">Push the button to generate!</p>
-        <button type="button" onclick="myFunc()">Test!</button>
+        <p id = "demo">Push the button to generate an idea!</p>
+        <button type="button" onclick="myFunc()">Generate Idea!</button>
     </body>
 </html>
