Fixed button functionality

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <title>CUHacking 2019</title>
         <script>
             function generateIdea() {
-                document.getElementById("demo").innerHTML = "Hack your grandparents."
+                document.getElementById("form1").innerHTML = "Dating App"
+                document.getElementById("form2").innerHTML = "Robots"
             }
         </script>
     </head>
@@ -24,10 +25,13 @@
         </div>
 
         <div class="main">
-            <p>Hack</p>
-            <p id="form1">ChatApp</p>
-            <p>for</p>
-            <p id="form2">Grandparents</p>
+
+            <div class="text">
+                <p>Hack</p>
+                <p id="form1">ChatApp</p>
+                <p>for</p>
+                <p id="form2">Grandparents</p>
+            </div>
 
             <div class="button">
                 <button type="button" onclick="generateIdea()">Generate Idea!</button>
