--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
     <body>
         <h1>CuHacking 2019</h1>
         <p>Hello World!</p>
+        <div class = "Logo">
+          <img src = "Photos/logo_text.png" alt = "logo">
+        </div>
     </body>
 </html>
