added Random function and Word Bank

--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <title>CUHacking 2019</title>
         <script>
-            function generateIdea() {
-                document.getElementById("form1").innerHTML = "Dating App"
-                document.getElementById("form2").innerHTML = "Robots"
+            var wordBank1 = ["Chat App", "Dating App", "Website", "Platformer Game", "Shooter Game"]
+            var wordBank2 = ["Kids", "Teens", "Students", "Grandparents", "Parents"]
+
+            function randInt(min, max) {
+                return Math.floor(Math.random() * (max - min + 1) ) + min;
             }
+
+            function generateIdea() {
+                var roll1 = randInt(0, 5)
+                var roll2 = randInt(0, 5)
+                document.getElementById("form1").innerHTML = wordBank1[roll1]
+                document.getElementById("form2").innerHTML = wordBank2[roll2]
+            }
+
         </script>
     </head>
 
