--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <title>CUHacking 2019</title>
         <script>
+
             var wordBank1 = ["Chat App", "Dating App", "Website", "Platformer Game", "Shooter Game"]
             var wordBank2 = ["Kids", "Teens", "Students", "Grandparents", "Parents"]
 
             function randInt(min, max) {
-                return Math.floor(Math.random() * (max - min + 1) ) + min;
+                return Math.floor(Math.random() * (max - min) ) + min;
             }
 
             function generateIdea() {
