Changed form1 and form2 field to blank

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
             <div class="text">
                 <p>Hack</p>
-                <p id="form1">ChatApp</p>
+                <p id="form1"></p>
                 <p>for</p>
-                <p id="form2">Grandparents</p>
+                <p id="form2"></p>
             </div>
 
             <div class = "Logo">
