--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
                 <img src = "Photos/logo_text.png" alt = "logo">
             </div>
 
+            <div class="text">
+                <p>Previous Suggestions:</p>
+            </div>
+
         </div>
     </body>
 </html>
