--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     </head>
 
     <body>
-        <div class="headers">
+        <div class="header">
 
             <div class="title">
                 <h1>CuHacking 2019 Hackathon Idea Generator</h1>
             </div>
 
-            <div class="header">
+            <div class="instruction">
                 <h2>Push the button to generate an idea!</h2>
             </div>
 
@@ -25,19 +25,20 @@
                 <button type="button" onclick="generateIdea()">Generate Idea!</button>
             </div>
 
-            <div class="text">
+            <div class="idea">
                 <p>Hack</p>
-                <p id="form1"></p>
-                <p>for</p>
-                <p id="form2"></p>
+                <p id="form1"> </p>
+                <p> for</p>
+                <p id="form2"> </p>
             </div>
 
             <div class = "Logo">
                 <img src = "Photos/logo_text.png" alt = "logo">
             </div>
 
-            <div class="text">
-                <p>Previous Suggestions:</p>
+            <div class="suggestions">
+                <h3>Previous Suggestions:</h3>
+                <p id = "previousSuggestions" style="white-space: pre-line"> </p>
             </div>
 
         </div>
