--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     </head>
 
     <body>
+            <div class = "tab"> 
+                    <button class = "tablinks" onclick="openCity(event, 'Home')">Home </button>
+                    <button class = "tablinks" onclick="openCity(event, 'Idea Generator')">Idea Generator </button>
+                    <button class = "tablinks" onclick="openCity(event, 'Scheduler')">Scheduler </button>
+                </div>
         <div class="header">
 
             <div class="title">
