Added Tabs for three pages on the 'website.'

--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
         <title>CUHacking 2019</title>
         <script type="text/javascript" src="main.js"></script>
     </head>
-
+        <div class="header">
     <body>
             <div class = "tab"> 
-                    <button class = "tablinks" onclick="openCity(event, 'Home')">Home </button>
-                    <button class = "tablinks" onclick="openCity(event, 'Idea Generator')">Idea Generator </button>
-                    <button class = "tablinks" onclick="openCity(event, 'Scheduler')">Scheduler </button>
-                </div>
-        <div class="header">
-
+                <a href="home.html"> <button class = "tablinks"> Home </button> </a>
+                <a href="index.html"> <button class = "tablinks"> Idea Generator </button> </a>     
+                <a href="scheduler.html"> <button class = "tablinks"> Home </button> </a>
+            </div>
             <div class="title">
                 <h1>CuHacking 2019 Hackathon Idea Generator</h1>
             </div>
