--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             </div>
 
             <div class="text">
-                <p>Hack</p>
-                <p id="form1"></p>
-                <p>for</p>
-                <p id="form2"></p>
+                <p1>Hack</p1>
+                <p2 id="form1"></p2>
+                <p3>for</p3>
+                <p4 id="form2"></p4>
             </div>
 
 
