--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <div class="header">
           
             <div class = "tab"> 
-                <a href="home.html"> <button class = "tablinks"> Home </button> </a>
-                <a href="index.html"> <button class = "tablinks"> Idea Generator </button> </a>     
-                <a href="scheduler.html"> <button class = "tablinks"> Home </button> </a>
+                <a href="home.html">Home</a>
+                <a href="index.html">Idea Generator</a>     
+                <a href="scheduler.html">Scheduler</a>
             </div>
           
             <div class="title">
