--- a/index.html
+++ b/index.html
@@ -5,29 +5,24 @@
         <title>CUHacking 2019</title>
         <script type="text/javascript" src="main.js"></script>
     </head>
-        <div class="header">
     <body>
+        <div class="header">
             <div class = "tab"> 
-                <a href="home.html"> <button class = "tablinks"> Home </button> </a>
-                <a href="index.html"> <button class = "tablinks"> Idea Generator </button> </a>     
-                <a href="scheduler.html"> <button class = "tablinks"> Home </button> </a>
+                    <a href="home.html">Home</a>
+                    <a href="index.html">Idea Generator</a>     
+                    <a href="scheduler.html">Scheduler</a>
             </div>
             <div class="title">
                 <h1>CuHacking 2019 Hackathon Idea Generator</h1>
             </div>
-
             <div class="instruction">
                 <h2>Push the button to generate an idea!</h2>
             </div>
-
         </div>
-
         <div class="main">
-
             <div class="button">
                 <button type="button" onclick="generateIdea()">Generate Idea!</button>
             </div>
-
             <div class="idea">
                 <p>Hack</p>
                 <p id="form1">~</p>
@@ -35,16 +30,13 @@
                 <p id="form3">~</p>
                 <p id="form4">~</p>
             </div>
-
             <div class = "Logo">
                 <img src = "Photos/logo_text.png" alt = "logo">
             </div>
-
             <div class="suggestions">
                 <h3>Previous Suggestions:</h3>
                 <p id = "previousSuggestions" style="white-space: pre-line"> </p>
             </div>
-
         </div>
     </body>
 </html>
