--- a/ideagen.html
+++ b/ideagen.html
@@ -18,9 +18,25 @@
             <div class = "Logo">
                 <img src = "Photos/logo_text.png" alt = "logo">
             </div>
+            <div class="instruction">
+                <h2>Push the button to generate an idea!</h2>
+            </div>
         </div>
         <div class="main">
-            <p>text</p>
+            <div class="button">
+                <button type="button" onclick="generateIdea()">Generate Idea!</button>
+            </div>
+            <div class="idea">
+                <p1>Hack...</p1>
+                <p2 id="form1"></p2>
+                <p3 id="form2"></p3>
+                <p4 id="form3"></p4>
+                <p5 id="form4"></p5>
+            </div>
+            <div class="suggestions">
+                <h3>Previous Suggestions:</h3>
+                <p id = "previousSuggestions" style="white-space: pre-line">~</p>
+            </div>
         </div>
     </body>
 </html>
