its a lovely day outside...

--- a/index.html
+++ b/index.html
@@ -7,20 +7,41 @@
     </head>
     <body>
         <div class="header">
+           
             <div class = "tab">
+
+
                 <a href="index.html">HOME</a>
+            
+            </div class>
+
+            <div class = "tab2">
+
                 <a href="ideagen.html">IDEA GENERATOR</a>
+
+            </div>
+
+            <div class = "tab3">
                 <a href="scheduler.html">SCHEDULER</a>
+
+            </div>
+
+
             </div>
             <div class="title">
-                <h1>CuHacking 2019 Hackathon Idea Generator</h1>
+                <h1>cuHacking 2019</h1>
             </div>
-            <div class = "Logo">
+            <div class = "Logo1">
                 <img src = "Photos/logo_text.png" alt = "logo">
             </div>
-        </div>
-        <div class="main">
-            <p>text</p>
+
+            <div class = "names">
+                <p1>Krishna Dube</p1>
+                <p2>Vincent Nguyen</p2>
+                <p3>Mukta Manhas</p3>
+                <p4>Fardeen Haque</p4>
+            </div>
+
         </div>
     </body>
 </html>
