--- a/index.html
+++ b/index.html
@@ -36,10 +36,22 @@
             </div>
 
             <div class = "names">
-                <p1>Krishna Dube</p1>
-                <p2>Vincent Nguyen</p2>
-                <p3>Mukta Manhas</p3>
-                <p4>Fardeen Haque</p4>
+
+                <div class = "name1">
+                <a href = "https://github.com/KDube1">Krishna Dube</a>
+                </div>
+
+                <div class = "name2">
+                <a href = "https://github.com/vincenthnguyen">Vincent Nguyen</a>
+                </div>
+
+                <div class = "name3">
+                <a href = "https://github.com/mukta-m">Mukta Manhas</a>
+                </div>
+
+                <div class = "name4">
+                <a href = "https://github.com/FruityToasters">Fardeen Haque</a>
+                </div>
             </div>
 
         </div>
