--- a/ideagen.html
+++ b/ideagen.html
@@ -25,7 +25,7 @@
         
                     </div>
             <div class="title">
-                <h1>CuHacking 2019 Hackathon Idea Generator</h1>
+                <h1>cuHacking 2019 Hackathon Idea Generator</h1>
             </div>
             <div class = "Logo">
                 <img src = "Photos/logo_text.png" alt = "logo">
