fixed generate button

--- a/ideagen.html
+++ b/ideagen.html
@@ -35,7 +35,7 @@
         </div>
         <div class="main">
             <div class="buttons">
-                <button class="button" onclick="generate()">Generate Idea!</button>
+                <button class="button" onclick="generateIdea()">Generate Idea!</button>
             </div>
             <div class="idea">
                 <p1>Hack...</p1>
