changed numerous files for logo functionality

--- a/scheduler.html
+++ b/scheduler.html
@@ -29,7 +29,7 @@
                 <h1>CuHacking 2019 Hackathon Idea Generator</h1>
             </div>
             <div class = "Logo">
-                <img src = "Photos/logo_text.png" alt = "logo">
+                <img src = "Photos/logo_text.png" alt = "logo" onclick="backHome()">
             </div>
         </div>
         <div class="main">
